switch to c++20, added time lib and initial data recording caps

--- a/httpServer/config.json
+++ b/httpServer/config.json
@@ -17,6 +17,11 @@
       "path": "/hello",
       "controller": "helloController",
       "http_methods": ["get","post"]
+    },
+    {
+      "path": "/record",
+      "controller": "dataRecordController",
+      "http_methods": ["post"]
     }
   ],
   "log": {
